# GPUMCI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  info.txt
GPUMCI/: CMakeLists.txt
GPUMCI/detector/: CMakeLists.txt  DetectorCBCT.cuh  DetectorCBCTScatter.cuh  DetectorStorePhoton.cuh  DoseDetector.cuh  NoDetector.cuh
GPUMCI/implementations/: AbsorbingMC.cu  AbsorbingMC.h  CMakeLists.txt  DoseMC.cu  DoseMC.h  DosePhaseSpaceMC.cu  DosePhaseSpaceMC.h  ForwardProjector.cu  ForwardProjector.h  GainDoseMC.cu  GainDoseMC.h  GainMC.cu  GainMC.h  MaterialUtils.cu  MaterialUtils.cuh  PhaseSpaceMC.cu  PhaseSpaceMC.h  PhaseSpaceStorePhotonsMC.cu  PhaseSpaceStorePhotonsMC.h  PrecomputedMC.cu  PrecomputedMC.h  SimpleMC.cu  SimpleMC.h  SpectMC.cu  SpectMC.h  WoodcockUtils.cu  WoodcockUtils.cuh
GPUMCI/interactions/: CMakeLists.txt  ComptonEverett.cuh  ComptonPrecomputed.cuh  FixedStep.cuh  InteractionHandlerAttenuating.cuh  InteractionHandlerPhoton.cuh  InteractionHandlerPhotonNonVectorized.cuh  InteractionHandlerProjector.cuh  InteractionTypes.h  NoInteraction.cuh  PhotonPhoto.cuh  PrecomputedInteractionUtils.cuh  PrecomputedInteractionUtils.h  RayleighPrecomputed.cuh  WoodcockStep.cuh
GPUMCI/photongenerator/: CMakeLists.txt  PhotonGeneratorGainImage.cuh  PhotonGeneratorPhaseSpace.cuh  PhotonGeneratorSPECT.cuh  PhotonGeneratorSimulated.cuh  PhotonGeneratorUniform.cuh  PhotonGeneratorUniformMorton.cuh
GPUMCI/physics/: CMakeLists.txt  CudaMonteCarlo.cuh  CudaSettings.h  MaterialEntry.h
GPUMCI/rng/: CMakeLists.txt  CurandRng.cu  CurandRng.cuh  DeterministicRng.cuh  MWCRng.cuh
GPUMCI/utils/: CMakeLists.txt  CudaCosWeighting.cpp  CudaCosWeighting.cu  CudaCosWeighting.h  cuda_utils.cuh  physical_constants.h
GPUMCIPy/: CMakeLists.txt  GPUMCIPy.cpp  __init__.py  setup.py
cpptest/: GPUMCIPy.cpp
data/physics/attenuation/: CTP486.pdata  READMEfileFormat_pdata.txt  air.pdata  aluminium.pdata  bone-icrp.pdata  bone-icru44.pdata  bone.pdata  brain-icrp.pdata  brain-icru44.pdata  brain.pdata  grey_matter.pdata  iron.pdata  tissue-icrp.pdata  tissue-icru44.pdata  tissue.pdata  water.pdata  white_matter.pdata
data/physics/code/: Create_Tables.py  Create_Tables_Attenuation.py  Create_Tables_Compton.py  Create_Tables_Rayleigh.py  Substances.py  xraylib_np_mock.py
data/physics/interaction/: compton_CTP486_ne146_estep1kev.txt  compton_air_ne146_estep1kev.txt  compton_aluminium_ne146_estep1kev.txt  compton_bone-icrp_ne146_estep1kev.txt  compton_bone-icru44_ne146_estep1kev.txt  compton_bone_ne146_estep1kev.txt  compton_brain-icrp_ne146_estep1kev.txt  compton_brain-icru44_ne146_estep1kev.txt  compton_brain_ne146_estep1kev.txt  compton_grey_matter_ne146_estep1kev.txt  compton_iron_ne146_estep1kev.txt  compton_tissue-icrp_ne146_estep1kev.txt  compton_tissue-icru44_ne146_estep1kev.txt  compton_tissue_ne146_estep1kev.txt  compton_water_ne146_estep1kev.txt  compton_white_matter_ne146_estep1kev.txt  rayleigh_CTP486_ne146_estep1kev.txt  rayleigh_air_ne146_estep1kev.txt  rayleigh_aluminium_ne146_estep1kev.txt  rayleigh_bone-icrp_ne146_estep1kev.txt  rayleigh_bone-icru44_ne146_estep1kev.txt  rayleigh_bone_ne146_estep1kev.txt  rayleigh_brain-icrp_ne146_estep1kev.txt  rayleigh_brain-icru44_ne146_estep1kev.txt  rayleigh_brain_ne146_estep1kev.txt  rayleigh_grey_matter_ne146_estep1kev.txt  rayleigh_iron_ne146_estep1kev.txt  rayleigh_tissue-icrp_ne146_estep1kev.txt  rayleigh_tissue-icru44_ne146_estep1kev.txt  rayleigh_tissue_ne146_estep1kev.txt  rayleigh_water_ne146_estep1kev.txt  rayleigh_white_matter_ne146_estep1kev.txt
gpumciodl/: CudaProjectorDose.py  CudaProjectorGain.py  CudaProjectorOptimized.py  CudaProjectorPhaseSpace.py  CudaProjectorPhaseSpaceStorePhotons.py  CudaProjectorPrimary.py  CudaProjectorScatter.py  CudaProjectorScatterSpectrum.py  CudaProjectorSpectrum.py  __init__.py  setup.py  util.py
odl_cpp_utils/: CMakeLists.txt  README.md
odl_cpp_utils/cuda/: CMakeLists.txt  CuVector.h  CudaHostMemory.cu  CudaHostMemory.h  CudaMemory.cu  CudaMemory.h  CudaQuaternion.cu  CudaQuaternion.h  cuda_utils.h  cutil_math.h  disableThrustWarnings.h  dummy.cpp  enableThrustWarnings.h  errcheck.h  geometry.h  texture.h
odl_cpp_utils/python/: CMakeLists.txt  numpy_eigen.h  numpy_utils.h
odl_cpp_utils/test/: CMakeLists.txt  SlowTest.h  TestUtils.h
odl_cpp_utils/utils/: CMakeLists.txt  EigenUtils.h  Ellipse.h  OptimizationUtils.h  Phantom.cpp  Phantom.h  PrintArray.h  Projection.h  README.md  RLGeometries.h  StandardPhantoms.cpp  StandardPhantoms.h  Statistics.h  Timing.h  cast.h  utilities_export.h
python/: README.md  phantom.py  projection_gpumci.py  projection_gpumci_scatter.py  projection_simrec_materials_real_phantom.py  run_absorbing.py  run_dose.py  run_dose_real_phantom.py  run_dose_real_phantom_vtk.py  run_forwardprojector.py  run_forwardprojector_real_phantom.py  run_gain_real_phantom.py  run_gain_simple_real.py  run_phasespace_real_phantom.py  run_precomputed.py  run_precomputed_2.py  run_precomputed_real_phantom.py  run_precomputed_real_phantom_gate_comp.py  run_simple.py  run_spect_real_phantom.py  tomography_simulated3dCuda.py  tomography_simulated_optimized.py
